Desktop and tablet versions

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div class="container">
     <div class="card daniel">
+      <div class="quoteImg"><img src="./images/bg-pattern-quotation.svg" alt="Purple quotation mark."></div>
       <div class="profile">
         <img src="./images/image-daniel.jpg" alt="A picture of Daniel Clifford">
         <div class="person">
